fixed margin spacing

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,18 @@
+.summary {
+    max-width: 960px;
+    margin: 15vw auto 20vw;
+}
+
 #headshot {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     object-position: 0 40%;
     border-radius: 50%;
 }
 
 .image {
-    margin: 0 5%;
+    margin: 0 5vw;
 }
 
 .info {
@@ -15,7 +20,12 @@
 }
 
 .about-me {
-    font-size: 1.75vw;
+    font-size: 2vw;
+    margin-bottom: 15vw;
+}
+
+.skills {
+    margin-bottom: 15vw;
 }
 
 figure {
